# measure-guide

./: .gitignore  CHANGELOG.md  README.md  REFACTOR.md  index.html  package-lock.json  package.json
.github/workflows/: tauri-build.yml
src/: App.tsx  MeasureCanvasApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CalibrationOverlay.tsx  Canvas.tsx  MeasurementLabel.tsx  MenuBar.tsx  Toolbar.tsx  TopBar.tsx  index.ts
src/hooks/: index.ts  useHistory.ts  useViewport.ts  useWindowSize.ts
src/services/: export.ts
src/types/: index.ts
src/utils/: geometry.ts
