[package]
name = "measure-guide"
version = "0.2.0"
description = "Cross-platform desktop app built with Tauri and React for measuring and annotating images. Users can load plans or photos, calibrate a scale, draw lines, rectangles or circles, calculate distances and areas in real units, and export the annotated image as PDF or PNG."
authors = ["Sascha Klein, cloudworxx.us <cloudworxx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "measure_guide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
